--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <link rel="stylesheet" href="src/index.css" />
     <title>ToDo-React</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="src/main.jsx"></script>
+  </body>
 </html>
